Correction after code review

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+/home/dunice/git_pr/BasicServer/src/main/resources/application.properties
+/home/dunice/git_pr/BasicServer/src/main/resources/application-dev-properties
