--- a/.gitignore
+++ b/.gitignore
@@ -46,8 +46,9 @@ bin/*
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-!**/src/main/resources/application.properties
-!**/src/main/resources/application-dev.properties
+src/main/resources/application-dev.properties
+src/main/resources/application.properties
+
 ### Eclipse ###
 .apt_generated
 .classpath
